# KfxApiTool

./: CMakeCache.txt  CMakeLists.txt  README.md  about_dialog.cpp  about_dialog.ui  add_command_dialog.cpp  add_command_dialog.h  add_command_dialog.ui  command_widget.cpp  command_widget.h  connect_dialog.cpp  connect_dialog.h  connect_dialog.ui  edit_command_dialog.cpp  edit_command_dialog.h  edit_command_dialog.ui  kfx_api_tool.cpp  kfx_api_tool.h  kfx_api_tool.ui  main.cpp  q_kfx_set_variable_completer.h  q_kfx_variable_completer.h  set_variable_dialog.cpp  set_variable_dialog.h  set_variable_dialog.ui  subscribe_event_dialog.cpp  subscribe_event_dialog.h  subscribe_event_dialog.ui  subscribe_variable_dialog.cpp  subscribe_variable_dialog.h  subscribe_variable_dialog.ui  subscribed_event_widget.cpp  subscribed_event_widget.h  subscribed_variable_widget.cpp  subscribed_variable_widget.h  version.h
